llvm/test/tools/llubi/noalias_reserved_foreign_read.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; Adapted from Miri's tests/pass/tree_borrows/reserved.rs int_protected_read:
; a protected Reserved pointer can observe a foreign read, but a later local
; write is then forbidden.
; RUN: not llubi --experimental-noalias --verbose < %s 2>&1 | FileCheck %s

define void @foreign_read_then_local_write(ptr noalias %x, ptr %raw) {
  %v = load i32, ptr %raw
  store i32 1, ptr %x
  ret void
}

define void @main() {
  %a = alloca i32
  store i32 0, ptr %a
  call void @foreign_read_then_local_write(ptr %a, ptr %a)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT:   %a = alloca i32, align 4 => ptr 0x8 [a]
; CHECK-NEXT:   store i32 0, ptr %a, align 4
; CHECK-NEXT: Entering function: foreign_read_then_local_write
; CHECK-NEXT:   ptr %x = ptr 0x8 [a]
; CHECK-NEXT:   ptr %raw = ptr 0x8 [a]
; CHECK-NEXT: NoAlias: created protector node #1 for 'a' based on raw/root
; CHECK-NEXT: NoAlias: node #1 foreign read through raw/root on 'a' bytes [0, 4): Reserved -> ReservedF
; CHECK-NEXT: NoAlias: read through raw/root on 'a' bytes [0, 4) checked 1 active noalias protector
; CHECK-NEXT:   %v = load i32, ptr %raw, align 4 => i32 0
; CHECK-NEXT: NoAlias: noalias violation: write through node #1 on 'a' bytes [0, 4) is local to protected node #1, but that protector is in ReservedF state
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 1, ptr %x, align 4 at @foreign_read_then_local_write
; CHECK-NEXT: #1   call void @foreign_read_then_local_write(ptr %a, ptr %a) at @main
; CHECK-NEXT: Immediate UB detected: noalias violation: write through node #1 on 'a' bytes [0, 4) is local to protected node #1, but that protector is in ReservedF state
; CHECK-NEXT: error: Execution of function 'main' failed.
